# topic-boundaries

./: .env.example  .gitignore  .python-version  README.md  config.yml  docker-compose.yml  find_topics.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
datasets/: sample.jsonl
datasets/arxiv/: cs100.jsonl  ml_ai_100.jsonl
results/: cs100_max_distance_sort_n10_top5.json  ml_ai_100_max_distance_sort_n10_top5.json
src/: centroid_neighbors.py  cli.py  clustering.py  collect_datasets.py  config.py  documents.py  indexing.py  pdf_corpus.py  pipeline.py
src/convex_hull/: README.md  __init__.py
src/cross_boundary/: README.md  __init__.py  boundaries.py
src/max_distance_sort/: __init__.py  boundaries.py
src/visualization/: __init__.py  cli.py  core.py  figure.py
src/voronoi_boundary/: __init__.py  boundaries.py
tests/: conftest.py  test_centroid_neighbors.py  test_cli_helpers.py  test_clustering.py  test_collect_datasets.py  test_config.py  test_convex_hull.py  test_cross_boundary.py  test_documents.py  test_embedding.py  test_env_url.py  test_indexing.py  test_max_distance_sort.py  test_pdf_corpus.py  test_pipeline_e2e.py  test_pipeline_precomputed.py  test_public_api.py  test_schema_builder.py  test_sources.py  test_viz.py  test_voronoi_boundary.py
topic_boundaries/: __init__.py  centroid_neighbors.py  cli.py  collect_datasets.py  documents.py  embedding.py  indexing.py  pdf_corpus.py  pipeline.py  schema.yml  schema_builder.py  sources.py
topic_boundaries/convex_hull/: __init__.py  boundaries.py
topic_boundaries/cross_boundary/: __init__.py
topic_boundaries/max_distance_sort/: README.md  __init__.py
topic_boundaries/visualization/: cli.py  (+3 more)
(+3 files in other folders)
