[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "topic-boundaries"
version = "0.1.0"
description = "Identify topic boundary documents via clustering and Redis vector search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "redis>=5.0",
  "redisvl>=0.12",
  "sentence-transformers>=2.6",
  "requests>=2.31",
  "scipy>=1.11",
  "tqdm>=4.66",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
corpus = ["pypdf>=4.0"]

[tool.setuptools.packages.find]
include = ["src", "src.*"]
